--- a/portpolio.html
+++ b/portpolio.html
@@ -83,7 +83,7 @@
                   <br></h3>
               
                 <div class="btn-container">
-                    <a href="My resume.pdf" class="btn btn-color-1">Download CV</a>
+                    <a href="Myresume.pdf" class="btn btn-color-1">Download CV</a>
                     <a href="#contact" class="btn btn-color-1">Contact</a>
                 </div>
                 <div id="socials-container">
@@ -322,7 +322,7 @@
    <!-- footer -->
 
     <footer>
-        <p class="copyright">© 2024 Divya Chaudhary. All Rights Reserved. <i class="fas fa-heart"></i></p>
+        <p class="copyright">© 2024 Divyaaaaaa Chaudhary. All Rights Reserved. <i class="fas fa-heart"></i></p>
     </footer>
     <script src="portpolio.js"> </script>
 </body>
