--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divya Chaudhary's Portfolio</title>
-    <link rel="stylesheet" href="portpolio.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
    
@@ -324,7 +324,7 @@
     <footer>
         <p class="copyright">© 2024 Divyaaaaaa Chaudhary. All Rights Reserved. <i class="fas fa-heart"></i></p>
     </footer>
-    <script src="portpolio.js"> </script>
+    <script src="index.js"> </script>
 </body>
 </html>
 
